...
    
    func setupView()
    {
        animatedScroll.animate(self.view, imageName: "background", animated: true)
        animatedScroll.alpha = 0.3
        cardView.addTarget(self, action: #selector(nextVC(_:)), for: .touchUpInside)
        changeBar("CAMERA TEST")
    }
    
    func addTestProp()
    {
        self.btnNext.isAccessibilityElement = true
        self.btnNext.accessibilityLabel = "btn2"
    }
    
    override func viewWillDisappear(_ animated: Bool)
    {
        streamingController!.stop()
    }
...
