...
    
    func prepareView()
    {
        animatedScroll.animate(self.view, imageName: "background", animated: true)
        animatedScroll.alpha = 0.3
        cardView.addTarget(self, action: #selector(nextVC(_:)), for: .touchUpInside)
        changeBar("CONNECT TO WiFi")
    }
    
    func addTestProp()
    {
        self.btnNext.isAccessibilityElement = true
        self.btnNext.accessibilityLabel = "btn1"
    }
    
    //MARK:- Move to the next VC
    @IBAction func btnSuccessClicked(_ sender: Any)
    {
        let vc = mainStoryboard.instantiateViewController(withIdentifier: "navigationController1")
...
